--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,18 +18,9 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-      {% endif %}
-      {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-      {% endif %}
-      
         <a href="https://mercon.uom.lk/" target="_blank" class="btn">MERcon</a>
         <a href="#invited-speakers" class="btn">Speakers</a>
-        <a href="#workshop-details" class="btn">Agenda</a>
-        <a href="#register" class="btn">Register</a>
+        <a href="#workshop-schedule" class="btn">Agenda</a>
     </header>
 
     <main id="content" class="main-content" role="main">
